--- a/.env
+++ b/.env
@@ -6,6 +6,6 @@ PORT = 8030
 
 ACCESS_TOKEN = dhhufbrkshfjeiiiieeehffgg333fjjjdrbhkdgrb@@
 
-EMAIL = danielemmanuel6320@gmail.com
+EMAIL = sleektv.surpport@gmail.com
 
-EMAIL_PASSWORD = upbg viqi hznz uuow
+EMAIL_PASSWORD = tdxk fhbv kyoa qvqw
